Fix horizontal scroll behavior and auto-scroll direction logic

--- a/src/index.css
+++ b/src/index.css
@@ -157,35 +157,6 @@ h1 {
   line-height: 1.2;
 }
 
-h2 {
-  font-size: 2.488rem;
-  /* font-weight: 700; */
-  line-height: 1.2;
-}
-
-h3 {
-  font-size: 2.074rem;
-  /* font-weight: 600; */
-  line-height: 1.3;
-}
-
-h4 {
-  font-size: 1.728rem;
-  font-weight: 600;
-  line-height: 1.3;
-}
-
-h5 {
-  font-size: 1.44rem;
-  font-weight: 600;
-  line-height: 1.4;
-}
-
-h6 {
-  font-size: 1.2rem;
-  font-weight: 600;
-  line-height: 1.4;
-}
 
 p {
   font-size: 1rem;
